# cogito

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json
agents/cogito-basic/: SOUL.md  config.yaml
apps/website/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml
apps/website/app/: globals.css  layout.tsx  page.tsx
apps/website/components/: logo.tsx
apps/website/components/canvas/: hero-network.tsx  section-particles.tsx
apps/website/components/layout/: footer.tsx  nav.tsx
apps/website/components/sections/: comparison.tsx  how-it-works.tsx  opening.tsx  problem.tsx  roadmap.tsx  solution.tsx  stack.tsx
apps/website/components/shared/: pull-quote.tsx  scroll-progress.tsx  section-heading.tsx  section-wrapper.tsx
apps/website/components/svg/: pillar-icons.tsx
apps/website/hooks/: use-typing-effect.ts
backend/: pyproject.toml
backend/cogito/: __init__.py  config.py
backend/cogito/agent/: __init__.py  base.py  cogito_basic.py
backend/cogito/agent/tools/: __init__.py  browser.py  code_exec.py  cognition.py  web_search.py
backend/cogito/api/: __init__.py  routes.py
backend/cogito/auth/: __init__.py  middleware.py  session.py  siwe.py
backend/cogito/cognition/: __init__.py  embeddings.py  graph.py  knowledge_base.py  maintenance.py  memory.py  scoring.py
backend/cogito/crypto/: __init__.py  encryption.py  keys.py  lit.py
backend/cogito/identity/: __init__.py  loader.py
backend/cogito/payments/: __init__.py  usdc.py
backend/cogito/storage/: __init__.py  arweave.py  base.py  ipfs.py  local.py
backend/cogito/threads/: __init__.py  manager.py
backend/tests/: test_auth.py  test_crypto.py  test_graph.py  test_knowledge_base.py  test_memory.py  test_storage.py
docs/: agent-framework.md  architecture.md  cognition-layer.md  decentralization.md  privacy-model.md  roadmap.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
