[project]
name = "cogito"
version = "0.1.0"
description = "Decentralized cognitive AI agent framework — trustless, privacy-preserving"
requires-python = ">=3.14"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "voyageai>=0.3.0",
    "pydantic>=2.0.0",
    # Decentralized auth
    "siwe>=4.0.0",
    "pyjwt>=2.9.0",
    "eth-account>=0.13.0",
    "web3>=7.0.0",
    # Encryption
    "cryptography>=43.0.0",
    # Decentralized storage
    "ipfshttpclient>=0.8.0a2",
    "arweave-python-client>=1.0.0",
    # Private embeddings (local model for user-scoped data)
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogito"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
